src/App.css
* {
  border: 1px solid rebeccapurple;
}
.options button {
  margin: 5px;
}

.character {
  width: 400px;
  height: 400px;
  margin: 0 auto;
}

.character img {
  width: 100%;
  height: 100%;
}

